2020-11-11  Brian Burg  <bburg@apple.com>

        REGRESSION(r267411): Unable to "Start Element Selection" with Web Inspector closed
        https://bugs.webkit.org/show_bug.cgi?id=218838
        <rdar://problem/71158215>

        Reviewed by Devin Rousso.

        The inspector side of the connection between WebInspector (inspected WebProcess) and
        WebInspectorUI (inspector WebProcess) was mistakenly removed in r267411. Revert those changes.
        Without a valid frontend connection, WebInspector cannot forward some IPC messages
        to WebInspectorUI including StartElementSelection.

        * WebProcess/Inspector/WebInspectorUI.cpp:
        (WebKit::WebInspectorUI::updateConnection):
        (WebKit::WebInspectorUI::closeWindow):
        * WebProcess/Inspector/WebInspectorUI.h:

2020-11-11  Said Abou-Hallawa  <said@apple.com>

        [GPU Process] Delete the DisplayList items: DrawImage and DrawTiledImage
        https://bugs.webkit.org/show_bug.cgi?id=218839

        Reviewed by Tim Horton.

        * GPUProcess/graphics/RemoteRenderingBackend.cpp:
        (WebKit::RemoteRenderingBackend::decodeItem):
        * WebProcess/GPU/graphics/RemoteImageBufferProxy.h:

2020-11-11  Chris Dumez  <cdumez@apple.com>

        Add RunLoop::Timer constructor taking in a WTF::Function
        https://bugs.webkit.org/show_bug.cgi?id=218828

        Reviewed by Darin Adler.

        Use the new RunLoop::Timer constructor to simplify the code a bit.

        * UIProcess/WebProcessPool.cpp:
        (WebKit::m_resetGPUProcessCrashCountTimer):
        * UIProcess/WebProcessPool.h:

2020-11-11  John Wilander  <wilander@apple.com>

        PCM: Change from ad-click-attribution to private-click-measurement (in all forms, including .well-known URL)
        https://bugs.webkit.org/show_bug.cgi?id=218730
        <rdar://problem/71094296>

        Reviewed by Alex Christensen.

        Change to the official name of the proposed standard Private Click Measurement